tests/invalid/sum_wrong_arg_count/main.py
def run_case() -> None:
    x: int = sum()

if __name__ == "__main__":
    run_case()
